[metadata]
name = taiga
authors = [{name = "Kaleidos INC", email = "support@taiga.io"}]
license = MPL
version = attr: taiga.__version__
homepage = https://taiga.io
documentation = https://docs.taiga.io
repository = https://github.com/taigaio/taiga
description = The backend code of Taiga
long_description = file: README.md, LICENSE
keywords = taiga, backend, api
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src
exclude=
