[metadata]
name = taiga6
authors = [{name = "Kaleidos Ventures SL", email = "support@taiga.io"}]
license = MPL
version = attr: taiga6.__version__
homepage = https://taiga.io
documentation = https://docs.taiga.io
repository = https://github.com/kaleidos-ventures/taiga-back
description = The backend code of Taiga 6
long_description = file: src/README.md, src/LICENSE
keywords = taiga, taiga6, backdend, api
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
exclude=
    tests
    tests.*
    docker
    docker.*
    scripts
    scripts.*

[options.entry_points]
console_scripts =
    manage = taiga6.manage:main

[requirements-files]
install_requires = ./src/requirements.txt
tests_require = ./src/requirements-devel.txt
#extras_require =
#  contrib = ./src/requirements-contribs.txt
